--- a/resources/css/colors.css
+++ b/resources/css/colors.css
@@ -5,11 +5,11 @@
 -----------------------------------------------------------------*/
 
 
-::selection { background: #f5ad42; }
+::selection { background: #179b94; }
 
-::-moz-selection { background: #f5ad42; }
+::-moz-selection { background: #179b94; }
 
-::-webkit-selection { background: #f5ad42; }
+::-webkit-selection { background: #179b94; }
 
 
 a,
@@ -64,7 +64,7 @@ h6 > span:not(.nocolor):not(.badge),
 .dark .product-title h3 a:hover,
 .dark .single-product .product-title h2 a:hover,
 .dark .product-price ins,
-.dark .tab-nav-lg li.ui-tabs-active a { color: #f5ad42; }
+.dark .tab-nav-lg li.ui-tabs-active a { color: #179b94; }
 
 .color,
 .h-text-color:hover,
@@ -74,7 +74,7 @@ a.h-text-color:hover,
 .tagcloud a:hover,
 .nav-tree li:hover > a,
 .nav-tree li.current > a,
-.nav-tree li.active > a { color: #f5ad42 !important; }
+.nav-tree li.active > a { color: #179b94 !important; }
 
 .top-cart-number::before,
 #page-menu-wrap,
@@ -120,7 +120,7 @@ input.switch-toggle-flat:checked + label:after,
 .dark #gotoTop:hover,
 .dark input.switch-toggle-round:checked + label::before,
 .dark input.switch-toggle-flat:checked + label,
-.dark input.switch-toggle-flat:checked + label::after { background-color: #f5ad42; }
+.dark input.switch-toggle-flat:checked + label::after { background-color: #179b94; }
 
 .bg-color,
 .bg-color #header-wrap,
@@ -133,14 +133,14 @@ input.switch-toggle-flat:checked + label:after,
 .widget-filter-links li.active-filter span,
 .page-item.active .page-link,
 .page-link:hover,
-.page-link:focus { background-color: #f5ad42 !important; }
+.page-link:focus { background-color: #179b94 !important; }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-themecolor,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-themecolor,
 .checkbox-style:checked + .checkbox-style-1-label:before,
 .checkbox-style:checked + .checkbox-style-2-label:before,
 .checkbox-style:checked + .checkbox-style-3-label:before,
-.radio-style:checked + .radio-style-3-label:before { background: #f5ad42; }
+.radio-style:checked + .radio-style-3-label:before { background: #179b94; }
 
 .irs-bar,
 .irs-from,
@@ -148,7 +148,7 @@ input.switch-toggle-flat:checked + label:after,
 .irs-single,
 .irs-handle > i:first-child,
 .irs-handle.state_hover > i:first-child,
-.irs-handle:hover > i:first-child { background-color: #f5ad42 !important; }
+.irs-handle:hover > i:first-child { background-color: #179b94 !important; }
 
 .top-cart-item-image:hover,
 .grid-filter.style-3 li.activeFilter a,
@@ -160,20 +160,20 @@ input.switch-toggle-flat:checked + label:after,
 .heading-block.border-color::after,
 .page-item.active .page-link,
 .page-link:focus,
-.dark .cart-product-thumbnail img:hover { border-color: #f5ad42; }
+.dark .cart-product-thumbnail img:hover { border-color: #179b94; }
 
 .border-color,
 .process-steps li.active a,
 .process-steps li.ui-tabs-active a,
 .tagcloud a:hover,
-.page-link:hover { border-color: #f5ad42 !important; }
+.page-link:hover { border-color: #179b94 !important; }
 
 .top-links-sub-menu,
 .top-links-section,
 .tabs-tb .tab-nav li.ui-tabs-active a,
 .dark .top-links-sub-menu,
 .dark .top-links-section,
-.dark .tabs-tb .tab-nav li.ui-tabs-active a { border-top-color: #f5ad42; }
+.dark .tabs-tb .tab-nav li.ui-tabs-active a { border-top-color: #179b94; }
 
 .title-border-color::before,
 .title-border-color::after,
@@ -182,20 +182,20 @@ input.switch-toggle-flat:checked + label:after,
 .irs-to:after,
 .irs-from:before,
 .irs-to:before,
-.irs-single:before { border-top-color: #f5ad42 !important; }
+.irs-single:before { border-top-color: #179b94 !important; }
 
-.title-block { border-left-color: #f5ad42; }
+.title-block { border-left-color: #179b94; }
 
 .rtl .title-block {
 	border-left-color: transparent;
-	border-right-color: #f5ad42;
+	border-right-color: #179b94;
 }
 
-.title-block-right { border-right-color: #f5ad42; }
+.title-block-right { border-right-color: #179b94; }
 
 .rtl .title-block-right {
 	border-right-color: transparent;
-	border-left-color: #f5ad42;
+	border-left-color: #179b94;
 }
 
 .more-link,
@@ -205,22 +205,22 @@ input.switch-toggle-flat:checked + label:after,
 .title-bottom-border h3,
 .title-bottom-border h4,
 .title-bottom-border h5,
-.title-bottom-border h6 { border-bottom-color: #f5ad42; }
+.title-bottom-border h6 { border-bottom-color: #179b94; }
 
 .fbox-effect.fbox-dark .fbox-icon i::after,
-.dark .fbox-effect.fbox-dark .fbox-icon i:after { box-shadow: 0 0 0 2px #f5ad42; }
+.dark .fbox-effect.fbox-dark .fbox-icon i:after { box-shadow: 0 0 0 2px #179b94; }
 
 .fbox-border.fbox-effect.fbox-dark .fbox-icon i:hover,
 .fbox-border.fbox-effect.fbox-dark:hover .fbox-icon i,
 .dark .fbox-border.fbox-effect.fbox-dark .fbox-icon i:hover,
-.dark .fbox-border.fbox-effect.fbox-dark:hover .fbox-icon i { box-shadow: 0 0 0 1px #f5ad42; }
+.dark .fbox-border.fbox-effect.fbox-dark:hover .fbox-icon i { box-shadow: 0 0 0 1px #179b94; }
 
 
 @media (min-width: 992px) {
 
 	.sub-menu-container .menu-item:hover > .menu-link,
 	.mega-menu-style-2 .mega-menu-title > .menu-link:hover,
-	.dark .mega-menu-style-2 .mega-menu-title:hover > .menu-link { color: #f5ad42; }
+	.dark .mega-menu-style-2 .mega-menu-title:hover > .menu-link { color: #179b94; }
 
 	.style-3 .menu-container > .menu-item.current > .menu-link,
 	.sub-title .menu-container > .menu-item:hover > .menu-link::after,
@@ -228,11 +228,11 @@ input.switch-toggle-flat:checked + label:after,
 	.page-menu-sub-menu,
 	.dots-menu .page-menu-item.current > a,
 	.dots-menu .page-menu-item div,
-	.dark .style-3 .menu-container > .menu-item.current > .menu-link { background-color: #f5ad42; }
+	.dark .style-3 .menu-container > .menu-item.current > .menu-link { background-color: #179b94; }
 
 	.style-4 .menu-container > .menu-item:hover > .menu-link,
 	.style-4 .menu-container > .menu-item.current > .menu-link,
-	.dots-menu.dots-menu-border .page-menu-item.current > a { border-color: #f5ad42; }
+	.dots-menu.dots-menu-border .page-menu-item.current > a { border-color: #179b94; }
 
 	.sub-menu-container,
 	.mega-menu-content,
@@ -241,11 +241,11 @@ input.switch-toggle-flat:checked + label:after,
 	.top-cart-content,
 	.dark .sub-menu-container,
 	.dark .mega-menu-content,
-	.dark .top-cart-content { border-top-color: #f5ad42; }
+	.dark .top-cart-content { border-top-color: #179b94; }
 
-	.dots-menu .page-menu-item div::after { border-left-color: #f5ad42; }
+	.dots-menu .page-menu-item div::after { border-left-color: #179b94; }
 	.rtl .dots-menu .page-menu-item div::after {
 		border-left-color: transparent;
-		border-right-color: #f5ad42;
+		border-right-color: #179b94;
 	}
 }
