--- a/resources/css/seo.css
+++ b/resources/css/seo.css
@@ -5,7 +5,7 @@
 /* Root Settings
 -----------------------------------------------------------------*/
 :root {
-	--themecolor:  #f5ad42;
+	--themecolor:  #179b94;
 	--basefontsize: 16px;
 	--fontfamily: 'Poppins', sans-serif;
 	--headerboxshadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
